# node-space

node_space_utils/: Cargo.toml  README.md
node_space_utils/src/: cli_manager.rs  display_utils.rs  handle_cli.rs  lib.rs  link_package.rs  main.rs  mod.rs  package_utils.rs  path_utils.rs  retry.rs  symlink_utils.rs  watcher_utils.rs
node_space_utils/src/args/: build_args.rs  coordinator_args.rs  dependencies_args.rs  group_args.rs  link_args.rs  mod.rs  project_args.rs  server_args.rs
node_space_utils/src/build_command/: build_project.rs
node_space_utils/src/command_line/: mod.rs  node_build.rs  process.rs
node_space_utils/src/commands/: base_command.rs  coordinator.rs  dependencies.rs  group.rs  mod.rs  project.rs  server.rs
node_space_utils/src/dependencies/: add.rs  update.rs
node_space_utils/src/errors/: build.rs  config_file.rs  invalid_project.rs  mod.rs  node_space.rs  process.rs  socket.rs  symlink.rs  watcher.rs
node_space_utils/src/groups/: add.rs  mod.rs  show.rs
node_space_utils/src/modals/: config_file.rs  coordinator.rs  coordinator_listener.rs  coordinator_pid_manager.rs  coordinator_updates_manager.rs  coordinator_watcher_handler.rs  link_action.rs  mod.rs  package.rs  server_config.rs  socket_build_data.rs  unique_vec.rs
node_space_utils/src/projects/: add.rs  show.rs
node_space_utils/src/server/: config.rs  start.rs
node_space_utils/src/socket/: mod.rs  socket_active_utils.rs
node_space_utils/src/watch_coordinator/: coordinator_communication.rs  mod.rs
node_space_utils/src/watch_coordinator/client/: constants.rs  mod.rs  (+2 more)
(+14 files in other folders)
