[package]
name = "node_space_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
notify-debouncer-full = "0.5.0"
notify = "8.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
signal-hook = "0.3.17"
libc = "0.2.171"
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3"
